# NoitaArchiveManager

./: .gitignore  CMakeLists.txt  ReadME.md  build.bat
src/: MyExpection.cpp  MyExpection.h  comReader.cpp  comReader.h  fileUtils.cpp  fileUtils.h  main.cpp
